namespace GameJam
{
	public static class AnimationNames
	{
		public static class Boolean
		{
			public const string IsMoving = "IsMoving";
			public const string IsAttacking = "IsAttacking";
			public const string IsPlayerDetected = "IsPlayerDetected";
			public const string IsJumping = "IsJumping";
		}

		public static class Trigger
		{
			public const string Death = "TriggerDeath";
			public const string DeathIdle = "TriggerDeathIdle";
			public const string Damaged = "TriggerDamaged";
			public const string Fire = "TriggerFire";
			public const string Attack = "TriggerAttack";
			public const string Dash = "TriggerDash";
			public const string Open = "TriggerOpen";
        }
	}
}
